...
                <Button
                    android:id="@+id/open_poster_dialog"
                    style="@style/Widget.Material3.Button.TonalButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="?attr/colorTertiaryContainer"
                    android:text="Select Poster"
                    app:icon="@drawable/edit_icon"
                    app:layout_constraintEnd_toEndOf="@+id/create_event_poster"
                    app:layout_constraintStart_toStartOf="@+id/create_event_poster"
                    app:layout_constraintTop_toBottomOf="@+id/create_event_poster" />

                <ImageView
...
                    android:hint="@string/enter_event_name"
                    app:layout_constraintBottom_toTopOf="@+id/enterLocationLayout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/create_event_name_icon">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/enterEventName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="4dp"
                        android:inputType="text" />
...
                    android:hint="@string/enter_event_location"
                    app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/create_event_location_icon">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/enterLocation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="4dp"
                        android:inputType="textPostalAddress" />
...
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:layout_weight="1"
                        android:hint="Time">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/enterTime"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:layout_marginBottom="4dp"
                            android:focusable="false"
                            android:inputType="none" />
...
                    android:hint="@string/enter_event_capacity"
                    app:layout_constraintBottom_toTopOf="@+id/enterEventDescriptionLayout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/create_event_location_icon">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/enterEventCapacity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="4dp"
                        android:inputType="numberSigned" />
...
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/create_event_description_icon">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/enterEventDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="4dp"
                        android:gravity="start|top"
...

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/eventDetailNextPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:text="Add Event"
        app:icon="@drawable/add_icon"
...
