...
                    android:layout_height="0dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView8"
                    android:nestedScrollingEnabled="true" app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/edit_event_buttoon"
                    style="?attr/floatingActionButtonSmallPrimaryStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    app:srcCompat="@drawable/edit_icon"
                    app:layout_constraintBottom_toBottomOf="@+id/profile_pic"
...
