...
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   xmlns:tools="http://schemas.android.com/tools">

    <!-- "Open Events" TextView -->
    <TextView
            android:id="@+id/textViewOpenEvents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Open Events"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
...
