...
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp" />

                <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/futureEvents"
                        android:layout_width="match_parent"
                        android:layout_height="350dp" />
            </LinearLayout>
        </ca.cmput301t05.placeholder.utils.CustomNestedScrollView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
...
